[package]
name = "evaperative_cooling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomecs = { path = "../AtomECS" }
atomecs-derive = "0.1.0"
nalgebra = { version = "0.29.0", features = ["serde-serialize"] }
specs={ version="0.17.0", features=["rayon"] }
specs-derive = "0.4.1"

easy-ml = "1.8.0"

rand = "0.8.3"
rand_distr = "0.4.0"
